@@ -226,6 +226,7 @@ signals:
 	void needSnapshot();
 	void sessionResetted();
 	void sessionConfChange(const QJsonObject &config);
+	void sessionOutOfSpace();
 
 	void serverConnected(const QString &address, int port);
 	void serverLoggedIn(
